--- a/dbService/Dockerfile
+++ b/dbService/Dockerfile
@@ -1,8 +1,8 @@
 # Use an Ubuntu base image
 FROM ubuntu:latest
 
-# Install runtime dependencies and build tools
-RUN apt-get update && apt-get install -y build-essential libzip-dev
+# Install Python 3 and cURL
+RUN apt-get update && apt-get install -y python3 python3-pip curl
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -13,11 +13,17 @@ COPY flightScanner.sh /app/flightScanner.sh
 COPY clean.sh /app/clean.sh
 COPY build/utilities /app/utilities
 
-# Set permissions for the scripts and the dbService binary
+# Create a new directory for storing shared library dependencies
+RUN mkdir /app/dependencies
+
+# Copy the shared library dependencies from the dependencies directory
+COPY build/dependencies/* /app/dependencies/
+
+# Set permissions for the scripts and dbService
 RUN chmod +x /app/dbService /app/flightScanner.sh /app/clean.sh
 
-# Set the environment variable LD_LIBRARY_PATH to include the libraries directory
-ENV LD_LIBRARY_PATH="/app"
+# Set the environment variable LD_LIBRARY_PATH to include both utilities and dependencies directories
+ENV LD_LIBRARY_PATH="/app/utilities:/app/dependencies"
 
 # Run the dbService program by default
 CMD ["./dbService"]
